<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main_screen"
    android:background="@color/primaryLight"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium_small"
        android:layout_marginEnd="@dimen/margin_medium_small"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gridFrame"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/settingsBTN"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_settings_orange_24dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/plus"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/score"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/resetBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium_small"
            android:text="@string/reset_button"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:background="@drawable/shape_rounded_rect_orange"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/words_found_TV"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/score"
            app:layout_constraintStart_toEndOf="@id/resetBTN"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:textColor="@color/white"
            android:text="@string/score_TV"
            android:textSize="@dimen/text_medium"
            app:layout_constraintEnd_toStartOf="@id/settingsBTN"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/textView2"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/gridFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_medium_large"
        android:layout_marginTop="0dp"
        android:background="@drawable/layout_border"
        android:layout_marginEnd="@dimen/margin_medium_large"
        android:layout_marginBottom="@dimen/margin_medium_small"
        android:padding="@dimen/padding_small"
        android:foregroundGravity="center"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        app:layout_constraintBottom_toTopOf="@id/wordTableLayout">

        <GridView
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:horizontalSpacing="@dimen/margin_medium"
            android:numColumns="10"
            android:verticalSpacing="@dimen/margin_medium">

        </GridView>
    </FrameLayout>

    <TableLayout
        android:background="@drawable/layout_border"
        android:id="@+id/wordTableLayout"
        android:layout_width="0dp"
        android:padding="@dimen/padding_small"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_large"
        android:layout_marginEnd="@dimen/margin_medium_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridFrame">


    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>